fix: update placeholder text in TagPicker input for clarity and change placeholder color for better visibility - Resolves #78

--- a/src/components/features/global/view/tags/tagPicker/tagPicker.module.css
+++ b/src/components/features/global/view/tags/tagPicker/tagPicker.module.css
@@ -30,5 +30,5 @@
   border-color: var(--text-color);
 }
 .input::placeholder {
-  color: var(--border-color);
+  color: var(--light-text-color);
 }
